Closed Bug 1828904 Opened 2 years ago Closed 2 years ago

Canvas demo (https://codepen.io/DonKarlssonSan/pen/LYzBYEP) is much more slower with gpu-canvas compared to skia-canvas (Part 1)

Categories

(Core :: Graphics: Canvas2D, defect)

defect

Tracking

()

RESOLVED FIXED
114 Branch
Tracking Status
firefox114 --- fixed

People

(Reporter: mayankleoboy1, Assigned: lsalzman)

References

(Blocks 1 open bug, )

Details

Attachments

(2 files)

Go to https://codepen.io/DonKarlssonSan/pen/LYzBYEP

Skia-canvas + async: https://share.firefox.dev/3KWFRaO (feels very smooth)
Gpu-canvas+ async: https://share.firefox.dev/3GXLggu / https://share.firefox.dev/41mZuj3 (feels very janky)

skia-canvas + Sync: https://share.firefox.dev/41Cxk3k (feels very smooth)
gpu-canvas+sync: https://share.firefox.dev/3A7DMUp (feels very janky)

I am filing this separately from bug 1804447. This bug is specifically for gpu-canvas VS skia-canvas.
Feel free to dupe as you see fit.

Attached file about:support
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f0e6f8086d6d Only accelerate with clear if rect is sufficiently large. r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch

Hi Lee

With the latest Nightly, here is a profile : https://share.firefox.dev/3LmaBn1 (Codepen version) / https://share.firefox.dev/426a7ab (local version)
With gpu-canvas, subjectively the demo still feels much more laggy as compared to skia-canvas.

Flags: needinfo?(lsalzman)
Duplicate of this bug: 1804447
Depends on: 1804233, 1776885
See Also: 1804447
Flags: needinfo?(lsalzman)
See Also: → 1830697
Summary: Canvas demo (https://codepen.io/DonKarlssonSan/pen/LYzBYEP) is much more slower with gpu-canvas compared to skia-canvas → Canvas demo (https://codepen.io/DonKarlssonSan/pen/LYzBYEP) is much more slower with gpu-canvas compared to skia-canvas (Part 1)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: