Bug 1828904 - Only accelerate with clear if rect is sufficiently large. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D176073